# MeetingMind

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FOLDER.md  GEMINI.md  PROJECT_MEMORY.md  PROMPT.MD  README.md  documentgeneration.md
.agents/: AGENTS.md  commands.md  context-map.md
.github/: copilot-instructions.md
00-project/: architecture-overview.md  glossary.md  product-overview.md  roadmap.md  vision.md  (+1 more)
apps/backend/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: router.py
apps/backend/app/api/v1/: auth.py  health.py
apps/backend/app/core/: config.py  logging.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  ai.py  audit.py  auth.py  base.py  enums.py  meeting.py  user.py  workspace.py
apps/backend/app/schemas/: auth.py  health.py
apps/backend/app/services/: auth.py  notifications.py
apps/backend/migrations/: README  env.py
apps/backend/migrations/versions/: 20260707_0001_initial_schema.py  f7f4ecb2373b_align_canonical_data_model.py
apps/backend/scripts/: __init__.py  configure_supabase_session_pooler.py  rotate_local_jwt_secret.py  smoke_real_auth.py
apps/backend/tests/api/: test_auth.py  test_health.py
apps/backend/tests/core/: test_config.py  test_logging.py  test_security.py
apps/backend/tests/db/: test_migrations.py
apps/backend/tests/models/: test_models.py
apps/backend/tests/scripts/: __init__.py  test_configure_supabase_session_pooler.py
apps/backend/tests/services/: test_notifications.py
(+220 files in other folders)
