[tool.poetry]
name = "meetingmind-backend"
version = "0.1.0"
description = "FastAPI backend for MeetingMind"
authors = ["MeetingMind Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.6"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["\\.venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
